--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,97 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Byrds Capacitor Contacts </ion-title>
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-item-sliding *ngFor="let c of contacts">
+    <ion-item>
+      <ion-label>
+        {{ c.displayName}}
+        <p>{{c.phoneNumbers[0]}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-item-sliding>
+</ion-content>
+
+<!-- <ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Byrds </ion-title>
+      <ion-title>Capacitor Contacts</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-list>
+    <div class="ion-text-start">
+      <ion-button (click)="getPermissions()"> Get Permission </ion-button>
+      <ion-button (click)="getContacts()"> Fetch Contacts </ion-button>
+    </div>
+    <ion-item *ngFor="let contact of contacts | async">
+      <ion-icon color="primary" slot="start" name="beer"></ion-icon>
+      <ion-avatar slot="start">
+        <ion-img [src]="contact.photoThumbnail"></ion-img>
+      </ion-avatar>
+      <ion-label class="ion-text-wrap">
+        <ion-text color="dark">
+          <h3>{{contact.displayName}}</h3>
+        </ion-text>
+        <ion-text color="medium" *ngFor="let number of contact.phoneNumbers">
+          <p>{{number.label}}:{{number.number}}</p>
+        </ion-text>
+        <ion-text color="medium" *ngFor="let mails of contact.emails">
+          <p>{{mails.label}}: {{mails.address}}</p>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+  </ion-list> -->
+
+<!-- <div id="container">
+    <strong>Ready to create an app?</strong>
+    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  </div> -->
+
+<!-- </ion-content> -->
+
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title> Contacts </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-button (click)="loadContacts()"></ion-button>
+<p>test</p>
+
+<ion-content>
+  <ion-button (click)="loadContacts()"></ion-button>
+  <ion-item-sliding *ngFor="let c of contacts">
+    <ion-item>
+      <ion-label>
+        <p>test</p>
+        {{ c.displayName }}
+        <p>{{ c.phonenUmber[0] }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-item-sliding>
+</ion-content> -->
+<!--
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Contacts</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-content>
+      <ion-button (click)="loadContacts()"></ion-button>
+      <ion-item-sliding *ngFor="let c of contacts">
+        <ion-item>
+          <ion-label>
+            {{ c.displayName }}
+            <p>{{ c.phonenUmber[0] }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-item-sliding>
+    </ion-content>
   </div>
-</ion-content>
+</ion-content> -->
